# IGNIS-TEST

./: .gitignore  BUILD_STATUS.md  FULL_BUILD_LOG.md  LICENSE  Makefile  POC_STATUS.md  README.md  SESSION_COMMANDS.md  TODO_AFTER_POC.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
backend/app/: __init__.py  communications.py  config.py  database.py  device_registry.py  escalation.py  logging_config.py  main.py  models.py  observation_formatter.py  protocol.py  rate_limit.py  tcp_server.py  websockets.py
backend/app/prompts/: dispatch_agent.txt  occupant_agent.txt
backend/tests/: conftest.py  test_api.py  test_call_policy.py  test_database.py  test_observations.py  test_protocol.py  test_tcp_integration.py
config/: ignis.example.yaml  model_manifest.schema.json  thresholds.example.json  zones.example.json
docs/: POC_HANDOFF.md  architecture.md  decisions.md  environment-audit.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
qnx/: CMakeLists.txt  Makefile  README.md
qnx/alarm_service/: README.md
qnx/alarm_service/src/: main.cpp
qnx/camera_service/: README.md
qnx/camera_service/include/: frame_source.hpp
qnx/camera_service/src/: frame_sources.cpp  main.cpp
qnx/common/include/ignis/: configuration.hpp  detections.hpp  evidence_buffer.hpp  frame_descriptor.hpp  frame_ring.hpp  geometry.hpp  incident.hpp  ipc_messages.hpp  logging.hpp  model_manifest.hpp  protocol.hpp  result.hpp  time.hpp
qnx/common/src/: geometry.cpp  incident.cpp  protocol.cpp
qnx/config/: ignis-qnx.example.yaml  thresholds.example.json  zones.example.json
qnx/incident_engine/: README.md
qnx/incident_engine/src/: main.cpp
qnx/inference_service/: README.md
qnx/inference_service/include/: inference_engine.hpp
qnx/inference_service/src/: inference_engine.cpp  main.cpp
qnx/models/: MODEL_SOURCE.md  README.md  model_manifest.example.json  model_manifest.json
qnx/scripts/: build-qnx.sh  collect-logs.sh  deploy-qnx.sh  failure-demo.sh  pi-update-and-start.sh  start-ignis.sh  stop-ignis.sh  verify-target.sh
qnx/stream_service/: README.md
qnx/stream_service/src/: main.cpp
qnx/tests/: geometry_tests.cpp  incident_engine_tests.cpp  model_decoder_tests.cpp  protocol_tests.cpp  test_support.hpp
qnx/toolchains/: qnx-aarch64.cmake
qnx/watchdog_service/: README.md
qnx/watchdog_service/src/: main.cpp
simulator/: README.md  __init__.py  pyproject.toml
simulator/ignis_simulator/: __init__.py  cli.py  protocol.py  render.py  scenarios.py
simulator/scenarios/: ambiguous_smoke.json  confirmed_fire.json  hard_negative.json
simulator/tests/: test_golden_protocol.py
training/: README.md  pyproject.toml  requirements-ml.txt
training/configs/: dataset.example.yaml  training.example.yaml
training/ignis_training/: __init__.py  augmentations.py  calibrate_thresholds.py  convert_annotations.py  evaluate.py  export_tflite.py  extract_frames.py  generate_manifest.py  split_by_source.py  train.py  validate_split.py  validate_tflite.py  visualize_predictions.py
training/tests/: test_pipeline.py
(+50 files in other folders)
