[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ignis-training"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["Pillow==11.3.0", "PyYAML==6.0.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ignis_training*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

